# serverless-test-2

./: dagster_cloud.yaml  pyproject.toml  requirements.txt
.github/workflows/: branch_deployments.yml  deploy.yml
