[project]
name = "serverless_test"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.11.0",
    "dagster-cloud>=1.11.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serverless_test"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "serverless_test"
registry_modules = [
    "serverless_test.components.*",
]


